WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215620
[Catalyst] Video should not pause automatically when switching desktops
https://bugs.webkit.org/show_bug.cgi?id=215620
Summary
[Catalyst] Video should not pause automatically when switching desktops
Eric Carlson
Reported
2020-08-18 12:57:38 PDT
Video should pause automatically when switching desktops or minimizing the host application.
Attachments
Patch
(2.50 KB, patch)
2020-08-18 13:45 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2020-08-18 12:59:35 PDT
<
rdar://problem/rdar://66283868
>
Eric Carlson
Comment 2
2020-08-18 13:45:37 PDT
Created
attachment 406806
[details]
Patch
EWS
Comment 3
2020-08-18 14:44:30 PDT
Committed
r265834
: <
https://trac.webkit.org/changeset/265834
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406806
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug