[Catalyst] Video should pause automatically when switching desktops https://bugs.webkit.org/show_bug.cgi?id=215620

Reviewed by Jer Noble.

* platform/audio/ios/MediaSessionManagerIOS.h:
* platform/audio/ios/MediaSessionManagerIOS.mm: Don't override resetRestrictions
on Catalyst so we don't pause video in the background.


Canonical link: https://commits.webkit.org/228384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265834 268f45cc-cd09-0410-ab3c-d52691b4dbfc